--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -222,13 +222,15 @@ main{
   }
   .recentReview_con_inner{
     width:38.4%;
+    display:flex;
+    flex-direction: column;
   }
   .recentReview_con_inner>div:last-child{
     display:block;
   }
   .recentReview_con strong{
-    font-size:1.6rem; 
-    height:1.8rem;
+    font-size:1.4rem; 
+    height:1.6rem;
   }
   .recentReview_con_bottom{
     margin-top: 20px; 
@@ -319,118 +321,45 @@ main{
 
   /* pc_1280 */
   @media screen and (min-width:1280px) {
-    
-    /* main{
-      width:100%;
-    }
-    .visual_wrap{
-      width:100%;
-      background-color:#131987;
-    } */
     .visual{
-      /* width:85.9%; */
-      /* margin:0 auto; */
-      /* padding: 80px 0; */
-      /* color:#fff; */
-      /* font-family: 'NanumSquareLight'; */
-      /* line-height:1.2; */
-      /* text-align:center; */
+      width:1280px;
     }
     .visual p:nth-of-type(1){
       font-size:4rem;
     }
     .visual p:nth-of-type(2){
-      /* margin-top:4px; */
-      /* display:inline-block; */
       font-size:4rem;
-    }
-    .visual p:nth-of-type(2) span{
-      /* display:inline-block; */
-      /* font-family: 'NanumSquareExtraBold'; */
     }
     .visual p:last-of-type{
       font-size: 6rem;
-      /* margin: 20px 0 48px; */
     }
-    .visual p:last-of-type span{
-      /* font-family: 'NanumSquareExtraBold';
-      background-color:#fff;
-      color:#131987;
-      padding: 0 4px; */
-    }
-    .search_main_wrap{
-      /* width:100%; *
-      max-width:480px; */
-      max-width:none;
-      width:78.6%;
-      /* padding: 12px 40px;
-      background-color:rgba(255,255,255,0.3);
-      border:3px solid #fff;
-      border-radius: 36px;
-      margin:0 auto; */
-    }
-    .search_main_wrap fieldset{
-      /* width:100%;
-      display:flex;
-      justify-content: space-around;
-      flex-wrap: nowrap; */
-    }
+    
     .search_main_wrap input{
-      /* width:100%;
-      background:none;
-      border:none;
-      color:#fff; */
-      font-size:1.8rem; 
-    }
-    .search_main_wrap input::placeholder{
-      /* color:rgba(255,255,255,0.6); */
+      font-size:2rem; 
     }
     .search_btn{
       width:32px; 
       height:32px; 
-      /* background:url(./images/btn_search_wh.png) no-repeat center/contain; */
     }
     .visual>span:last-child{
-      /* display:block;
-      margin-top:20px; */
-      font-size:1.8rem; 
-    }
-    .visual>span:last-child a{
-      /* display:inline-block;
-      margin-top:4px;
-      text-decoration: underline; */
+      font-size:2rem; 
     }
     /* visual end */
-    .recentReview_wrap{
-      /* width:78.6%;
-      margin:0 auto;
-      margin-top:160px; */
-    }
     .recentReview_wrap h2{
-      font-size:2.4rem;
-      /* font-family: 'NanumSquareExtraBold'; */
+      font-size:2.8rem;
     }
-    .recentReview{
-      /* width:100%;
-      margin-top:16px;
-      text-align: right; */
+    .recentReview_wrap{
+      max-width:1280px;
+      margin:160px auto 0;
     }
     .btn_recentReview{
-      /* font-size:1.4rem;
-      /* cursor: pointer;
-      display:inline-block; */
+      font-size:1.6rem;
     }
     .btn_recentReview::after{
-      /* content:"";
-      display:inline-block;
-      margin-left:8px;
-      width:12px;
-      height:12px;
-      background:url(./images/ico_arrow_R.png) no-repeat center/contain; */
+      width:14px;
+      height:14px;
     }
     .recentReview_con_wrap{
-      /* text-align:left; */
-      /* width:100%; */
       display:flex;
       justify-content: space-between;
     }
@@ -440,92 +369,33 @@ main{
     .recentReview_con_inner>div:last-child{
       display:block;
     }
-    .recentReview_con{
-      /* padding: 20px 9%; 
-      background-color: #ECECEC;
-      border-radius: 5px;
-      margin:20px 0; */
-    }
     .recentReview_con strong{
-      /* font-weight:normal; */
-      font-size:1.8rem; 
-      /* line-height:1.4;
-      display:block;
-      width:100%; */
-      height:2.2rem;
-      /* overflow-y:hidden; */
-    }
-    .recentReview_con p{
-      /* display:none; */
+      font-size:2rem; 
+      height:2.4rem;
     }
     .recentReview_con_bottom{
       margin-top: 20px; 
-      /* width:100%;
-      display:flex;
-      justify-content: right;
-      flex-wrap: wrap;
-      gap:8px;
-      color:#888; */
-      font-size:1.4rem;
-    }
-    .recentReview_con_bottom div{
-      /* width:27.8%;
-      height:auto;
-      line-height:1;
-      padding-bottom:1vw; */
-      background:url(./images/star_bg.svg) no-repeat top right/contain;
-    }
-    .recentReview_con_bottom ul{
-      /* display:flex;
-      justify-content: right;
-      gap: 8px; */
+      font-size:1.8rem;
     }
     .recentReview_con_bottom ul li:first-child{
       width:40px;
-      height:1.4rem;
-      /* overflow-y: hidden; */
+      height:1.8rem;
     }
     
-    .recentReview_con.focus p{
-      /* display:block; */
-    }
     .recentReview_con.focus{
-      padding: 40px 5% 28px 5%;
-      /* background-color: #EBECFF;
-      border-radius:5px; */
-      font-size:1.6rem;
-      /* line-height:1.4; */
-      /* width: 58.4%; */
+      font-size:1.8rem;
     }
     .recentReview_con.focus strong{
-      font-size:1.8rem;
-      /* font-family: 'NanumSquareBold'; */
-      /* height:auto; */
+      font-size:2rem;
     }
     .recentReview_con.focus p:nth-of-type(1){
-      margin-top:22px;
-      margin-bottom:8px;
+      margin-top:40px;
     }
-    .recentReview_con.focus span{
-      /* display:block;
-      font-family: 'NanumSquareBold'; */
-    }
-    .recentReview_con.focus ul li:first-child{
-      /* width:fit-content;
-      height:fit-content;
-      overflow-y: auto; */
-    }
-  
+
     .main_bottom_banner_wrap{
-      /* width:78.6%;
-      margin: 120px auto 44px; */
-    }
-    .main_bottom_banner{
-      /* width:100%;
-      height:234px;
-      border-radius: 5px;
-      background: #888 url() no-repeat center/contain; */
+      max-width: 1280px;
     }
     
   }
     /* main end */
+    /* pc_1280 end */
