--- a/public/styles/signup.css
+++ b/public/styles/signup.css
@@ -13,21 +13,20 @@ header {
   border-bottom: 1px solid rgba(51, 51, 51, 0.3);
   align-items: center;
 }
-header .area_logo .logo {
+header .area_logo{
   display: flex;
   font-size: 2.4rem;
   color: #333333;
   align-items: center;
   text-align: center;
 }
-header .area_logo .logo span:nth-child(1) {
-  color: #0038C9;
-  font-weight: 700;
+header .logo{
+  width:100px;
+  height:2.4rem;
+  margin-right:10px;
+  background:url(./images/logo_NeedU.png) no-repeat center/contain;
 }
-header .area_logo .logo span:nth-child(2) {
-  color: #FFCC00;
-  font-weight: 700;
-}
+
 .signup {
   width: 80%;
   margin: 0 auto;
@@ -124,7 +123,7 @@ form .checkmsg {
   border-radius: 4px;
 }
 .join_input label {
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   color: #333333;
   font-weight: 700;
   margin-left: 8px;
@@ -138,7 +137,7 @@ form .checkmsg {
 }
 .join_input2 label {
   font-weight: 400;
-  font-size: 1.2rem;
+  font-size: 1.6rem;
 }
 .join_radio {
   margin: 40px 0;
@@ -171,7 +170,7 @@ form .checkmsg {
   height: 65px;
   box-sizing: border-box;
   padding: 19px 28px;
-  font-size: 2.4rem;
+  font-size: 2rem;
   line-height: 24px;
   border: 1px solid #4876EF;
   border-color: #D7DCE5;
@@ -190,7 +189,7 @@ form .checkmsg {
     padding: 20px 0px 20px 120px;
   }
   header .area_logo .logo {
-    font-size: 2.8rem;
+    font-size: 2.4rem;
   }
   .signup {
     width: 510px;
@@ -198,10 +197,11 @@ form .checkmsg {
   }
   form input {
     height: 60px;
-    font-size: 2.2rem;
+    font-size: 1.8rem;
   }
   form .item label {
-    font-size: 2.4rem;
+    font-size: 1.8rem;
+    font-weight:bold;
   }
   form .item:nth-child(4) button {
     width: 120px;
@@ -213,47 +213,47 @@ form .checkmsg {
     margin-top: 60px;
   }
   .join_input_all input {
-    width: 40px;
-    height: 40px;
+    width: 28px;
+    height: 28px;
   }
   .join_input_all label {
-    font-size: 2.4rem;
+    font-size: 1.8rem;
     margin-left: 10px;
   }
   .join_input input {
-    width: 40px;
-    height: 40px;
+    width: 28px;
+    height: 28px;
   }
   .join_input label {
-    font-size: 2.0rem;
+    font-size: 1.8rem;
     margin-left: 10px;
   }
   .material-symbols-outlined {
-    font-size: 2.4rem;
+    font-size: 1.8rem;
   }
   .join_radio {
     margin: 60px 0;
   }
   .join_radio div {
-    font-size: 2.4rem;
+    font-size: 1.8rem;
     margin-bottom: 24px;
   }
   .join_radio ul li input {
-    width: 30px;
-    height: 30px;
+    width: 28px;
+    height: 28px;
   }
   .join_radio ul li label {
-    font-size: 2.0rem;
+    font-size: 1.8rem;
   }
 }
 
 /* PC 1024 사이즈 반응형 */
 @media screen and (min-width: 1024px) {
   form input {
-    font-size: 2.4rem;
+    font-size: 1.8rem;
   }
   .join_input label {
-    font-size: 2.0rem;
+    font-size: 1.8rem;
     margin-left: 10px;
   }
 }
