--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -9,7 +9,7 @@ main{
   background-color:#131987;
 }
 .visual{
-  width:78.6%;
+  width:80%;
   margin:0 auto;
   padding: 80px 0;
   color:#fff;
@@ -17,23 +17,28 @@ main{
   line-height:1.2;
   text-align:center;
 }
-.visual p:nth-of-type(1){
+.visual>div>p:nth-of-type(1){
   font-size: calc(1.2rem + 1vw);
 }
-.visual p:nth-of-type(2){
+.visual>div>p:nth-of-type(2){
   margin-top:4px;
   display:inline-block;
   font-size:calc(1.4rem + 1vw);
 }
-.visual p:nth-of-type(2) span{
+.visual>div>p:nth-of-type(2) span{
   display:inline-block;
   font-family: 'NanumSquareExtraBold';
 }
-.visual p:last-of-type{
+.visual>div{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.visual>p:last-of-type{
   font-size: calc(2.8rem + 1vw);
   margin: 20px 0 48px;
 }
-.visual p:last-of-type span{
+.visual>p:last-of-type span{
   font-family: 'NanumSquareExtraBold';
   background-color:#fff;
   color:#131987;
@@ -83,7 +88,7 @@ main{
 }
 /* visual end */
 .recentReview_wrap{
-  width:78.6%;
+  width:80%;
   margin:0 auto;
   margin-top:160px;
 }
@@ -112,16 +117,17 @@ main{
 .recentReview_con_wrap{
   text-align:left;
   width:100%;
+  margin-top: 10px;
 }
-.recentReview_con_inner>div:last-child{
-  display:none;
-}
-
 .recentReview_con{
-  padding: 20px 9%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 15px 9%;
   background-color: #ECECEC;
   border-radius: 5px;
-  margin:20px 0;
+  margin:0 0 20px;
+  height: 105px;
 }
 .recentReview_con strong{
   font-weight:normal;
@@ -136,28 +142,37 @@ main{
   display:none;
 }
 .recentReview_con_bottom{
-  margin-top: 8px;
+  margin-top: 20px;
   width:100%;
   display:flex;
   justify-content: right;
+  align-items: center;
   flex-wrap: wrap;
   gap:8px;
   color:#888;
   font-size:1.2rem;
 }
-.recentReview_con_bottom div{
-  width:27.8%;
-  height:auto;
-  line-height:1;
-  padding-bottom:1vw;
-  background:url(./images/star_bg.svg) no-repeat top right/contain;
+.recentReview_con_bottom>div:nth-of-type(1){
+  width: 90px;;
+  height: 18px;;
+}
+.star_bg {
+	position: relative;
+	background: url(./images/star_bg.svg) no-repeat;
+	background-size: contain;
+}
+.star_bg span{
+	position: absolute;
+	background: url(./images/star_selected.svg) no-repeat;
+	width: 100%;
+	height: 100%;
+	background-size:cover;
 }
 .recentReview_con_bottom ul{
   display:flex;
   justify-content: right;
   gap: 8px;
 }
-
 .recentReview_con.focus p{
   display:block;
 }
@@ -167,6 +182,8 @@ main{
   border-radius:5px;
   font-size:1.2rem;
   line-height:1.4;
+  display: none;
+  margin: 0;
 }
 .recentReview_con.focus strong{
   font-size:1.4rem;
@@ -181,9 +198,25 @@ main{
   display:block;
   font-family: 'NanumSquareBold';
 }
+.slider-for{
+  width: 58.4%;
+  display: none !important;
+}
+.slick-list,
+.slick-track{
+  height: 100%;
+}
+/* 첫번째 리뷰 보여주기 */
+.slick-current{
+  background-color: #EBECFF;
+}
+.slick-current strong{
+  font-size:1.4rem;
+  font-family: 'NanumSquareBold';
+}
 
 .main_bottom_banner_wrap{
-  width:78.6%;
+  width:80%;
   margin: 120px auto 44px;
 }
 .main_bottom_banner{
@@ -199,16 +232,22 @@ main{
 /* tablet_768 */
 @media screen and (min-width:768px) {
   .visual{
-    width:85.9%;
+    width:86%;
     color:#fff;
   }
-  .visual p:nth-of-type(1){
+  .visual>div>p:nth-of-type(1){
     font-size:2.4rem;
   }
-  .visual p:nth-of-type(2){
+  .visual>div>p:nth-of-type(2){
     font-size:2.4rem;
+    margin-top: 0px;
   }
-  .visual p:last-of-type{
+  .visual>div{
+    flex-direction: row;
+    justify-content: center;
+    gap: 8px;
+  }
+  .visual>p:last-of-type{
     font-size: 4.8rem;
   }
   .search_main_wrap{
@@ -216,24 +255,29 @@ main{
     width:78.6%;
   }
   /* visual end */
+  .recentReview_wrap{
+    width:86%;
+  }
   .recentReview_con_wrap{
     display:flex;
     justify-content: space-between;
   }
   .recentReview_con_inner{
     width:38.4%;
+  }
+  .recentReview_con_inner>div:last-child{
     display:flex;
     flex-direction: column;
   }
-  .recentReview_con_inner>div:last-child{
-    display:block;
+  .recentReview_con{
+    height: 85px;
   }
   .recentReview_con strong{
     font-size:1.4rem; 
     height:1.6rem;
   }
   .recentReview_con_bottom{
-    margin-top: 20px; 
+    margin-top: 10px; 
   }
   .recentReview_con_bottom div{
     background:url(./images/star_bg.svg) no-repeat top right/contain;
@@ -244,9 +288,12 @@ main{
     overflow-y: hidden;
   }
   .recentReview_con.focus{
-    padding: 40px 7% 28px 7%;
+    padding: 40px 30px 28px;
     font-size:1.4rem;
     width: 58.4%;
+    height: 100%;
+    display: flex !important;
+    justify-content: space-between;
   }
   .recentReview_con.focus strong{
     font-size:1.6rem;
@@ -260,7 +307,17 @@ main{
     height:fit-content;
     overflow-y: auto;
   }
-  
+  .slider-for{
+    display: block !important;
+  }
+  .slick-current{
+    padding: 15px 9%;
+    background-color: #EBECFF;
+    height: 85px;
+  }
+  .main_bottom_banner_wrap{
+    width:86%;
+  }
 }
   /* main end */
   /* tablet_768 end */
@@ -268,13 +325,13 @@ main{
   /* pc_1024 */
   @media screen and (min-width:1024px) {
     
-    .visual p:nth-of-type(1){
+    .visual>div>p:nth-of-type(1){
       font-size:3.2rem;
     }
-    .visual p:nth-of-type(2){
+    .visual>div>p:nth-of-type(2){
       font-size:3.2rem;
     }
-    .visual p:last-of-type{
+    .visual>p:last-of-type{
       font-size: 5.4rem;
     }
     .search_main_wrap input{
@@ -305,7 +362,6 @@ main{
       /* overflow-y: hidden; */
     }
     .recentReview_con.focus{
-      padding: 40px 5% 28px 5%;
       font-size:1.6rem;
     }
     .recentReview_con.focus strong{
@@ -322,18 +378,17 @@ main{
   /* pc_1280 */
   @media screen and (min-width:1280px) {
     .visual{
-      width:1280px;
+      width:67%;
     }
-    .visual p:nth-of-type(1){
+    .visual>div>p:nth-of-type(1){
       font-size:4rem;
     }
-    .visual p:nth-of-type(2){
+    .visual>div>p:nth-of-type(2){
       font-size:4rem;
     }
     .visual p:last-of-type{
       font-size: 6rem;
     }
-    
     .search_main_wrap input{
       font-size:2rem; 
     }
@@ -349,7 +404,7 @@ main{
       font-size:2.8rem;
     }
     .recentReview_wrap{
-      max-width:1280px;
+      max-width:67%;
       margin:160px auto 0;
     }
     .btn_recentReview{
@@ -381,7 +436,6 @@ main{
       width:40px;
       height:1.8rem;
     }
-    
     .recentReview_con.focus{
       font-size:1.8rem;
     }
@@ -393,7 +447,7 @@ main{
     }
 
     .main_bottom_banner_wrap{
-      max-width: 1280px;
+      max-width: 67%;
     }
     
   }
