--- a/public/styles/search_result.css
+++ b/public/styles/search_result.css
@@ -14,6 +14,7 @@ section {
   padding: 40px 20px;
 }
 .search-section label {
+  width: 80px;
   font-size: 1.6rem;
   font-weight: 700;
   line-height: 32px;
@@ -28,7 +29,6 @@ section {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
   gap: 15px;
 }
 .search-section .filter .city > div:nth-of-type(1) {
@@ -37,29 +37,74 @@ section {
   gap: 10px;
 }
 .search-section .filter .city > div:nth-of-type(1) > div:nth-of-type(1) {
+  position: relative;
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
 }
-.search-section .filter .city > div:nth-of-type(1) > div:nth-of-type(1) select {
-  width: 225px;
+.search-section .filter .city > div:nth-of-type(1) > div:nth-of-type(1) .sido {
+  width: 255px;
   height: 30px;
-  padding: 5px 20px;
   border-radius: 5px;
   border: 1px solid #000;
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
+  padding: 5px 20px;
   background: url(images/btn_detail.png) no-repeat right 20px center;
-  background-color: #fff;
   background-size: 14px 7px;
+  background-color: #fafafa;
+  color: #000;
+  font-size: 1.2rem;
+  line-height: 20px;
+}
+.search-section .filter .city > div:nth-of-type(1) > div:nth-of-type(1) .sido-list {
+  position: absolute;
+  top: 40px;
+  width: 255px;
+  border-radius: 5px;
+  border: 1px solid #000;
+  padding: 20px;
+  background-color: #fafafa;
+  color: #000;
+}
+.search-section .filter .city > div:nth-of-type(1) > div:nth-of-type(1) .sido-list ul {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 8px;
+}
+.search-section .filter .city > div:nth-of-type(1) > div:nth-of-type(1) .sido-list ul li label {
+  font-size: 1.2rem;
+  font-weight: 400;
+  line-height: 15px;
+}
+.search-section .filter .city > div:nth-of-type(1) > div:nth-of-type(1) .sido-list ul li label span {
+  vertical-align: top;
+}
+.search-section .filter .city > div:nth-of-type(1) > div:nth-of-type(1) .sido-list > div {
+  margin-top: 20px;
+  float: right;
+}
+.search-section .filter .city > div:nth-of-type(1) > div:nth-of-type(1) .sido-list > div button {
+  width: 60px;
+  color: #fff;
+  padding: 6px 12px;
+  border-radius: 3px;
+}
+.search-section .filter .city > div:nth-of-type(1) > div:nth-of-type(1) .sido-list > div .reset-sido {
+  background-color: #888;
+}
+.search-section .filter .city > div:nth-of-type(1) > div:nth-of-type(1) .sido-list > div .submit-sido {
+  background-color: rgba(0, 13, 255, 0.6);
 }
 .search-section .filter .city div:nth-of-type(2) {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
   font-size: 1.2rem;
 }
 .search-section .filter .score {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   gap: 15px;
 }
 .search-section .filter .score div {
@@ -70,31 +115,64 @@ section {
 .search-section .filter .score button:nth-of-type(1) {
   width: 36px;
   height: 32px;
-  background: url(images/1_point.png) no-repeat center/contain;
+  padding: 6px 8px;
+  background-color: #EDEEF9;
+  border-radius: 5px;
+}
+.search-section .filter .score button:nth-of-type(1) img {
+  width: 20px;
+  height: 20px;
 }
 .search-section .filter .score button:nth-of-type(2) {
   width: 55px;
   height: 32px;
-  background: url(images/2_point.png) no-repeat center/contain;
+  padding: 6px 8px;
+  background-color: #EDEEF9;
+  border-radius: 5px;
+}
+.search-section .filter .score button:nth-of-type(2) img {
+  width: 39px;
+  height: 20px;
 }
 .search-section .filter .score button:nth-of-type(3) {
   width: 74px;
   height: 32px;
-  background: url(images/3_point.png) no-repeat center/contain;
+  padding: 6px 8px;
+  background-color: #EDEEF9;
+  border-radius: 5px;
+}
+.search-section .filter .score button:nth-of-type(3) img {
+  width: 58px;
+  height: 20px;
 }
 .search-section .filter .score button:nth-of-type(4) {
   width: 93px;
   height: 32px;
-  background: url(images/4_point.png) no-repeat center/contain;
+  padding: 6px 8px;
+  background-color: #EDEEF9;
+  border-radius: 5px;
+}
+.search-section .filter .score button:nth-of-type(4) img {
+  width: 77px;
+  height: 20px;
 }
 .search-section .filter .score button:nth-of-type(5) {
   width: 112px;
   height: 32px;
-  background: url(images/5_point.png) no-repeat center/contain;
+  padding: 6px 8px;
+  background-color: #EDEEF9;
+  border-radius: 5px;
+}
+.search-section .filter .score button:nth-of-type(5) img {
+  width: 96px;
+  height: 20px;
+}
+.search-section .filter .score .score-active {
+  background-color: rgba(0, 13, 255, 0.6) !important;
 }
 .search-section .filter .hashtag {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   gap: 15px;
 }
 .search-section .filter .hashtag div {
@@ -104,8 +182,14 @@ section {
   gap: 5px;
 }
 .search-section .filter .hashtag button {
-  margin: 8px 10px;
+  padding: 8px 8px;
   font-size: 1.4rem;
+  border-radius: 5px;
+  color: #000;
+}
+.search-section .filter .hashtag .hashtag-active {
+  background-color: rgba(0, 13, 255, 0.6) !important;
+  color: #fafafa;
 }
 .search-section .search-main {
   display: flex;
@@ -264,6 +348,11 @@ section {
     justify-content: flex-start;
     gap: 10px;
   }
+  .search-section .filter .city .sido {
+    height: 35px !important;
+    font-size: 1.6rem !important;
+    line-height: 25px !important;
+  }
   .search-section .filter .score {
     flex-direction: row;
     gap: 10px;
@@ -313,21 +402,41 @@ section {
     width: 40px;
     height: 36px;
   }
+  .search-section .filter .score button:nth-of-type(1) img {
+    width: 24px;
+    height: 24px;
+  }
   .search-section .filter .score button:nth-of-type(2) {
     width: 63px;
     height: 36px;
+  }
+  .search-section .filter .score button:nth-of-type(2) img {
+    width: 47px;
+    height: 24px;
   }
   .search-section .filter .score button:nth-of-type(3) {
     width: 86px;
     height: 36px;
   }
+  .search-section .filter .score button:nth-of-type(3) img {
+    width: 70px;
+    height: 24px;
+  }
   .search-section .filter .score button:nth-of-type(4) {
     width: 109px;
     height: 36px;
   }
+  .search-section .filter .score button:nth-of-type(4) img {
+    width: 93px;
+    height: 24px;
+  }
   .search-section .filter .score button:nth-of-type(5) {
     width: 132px;
     height: 36px;
+  }
+  .search-section .filter .score button:nth-of-type(5) img {
+    width: 116px;
+    height: 24px;
   }
   .search-section .search-main .corp {
     gap: 40px;
@@ -364,5 +473,17 @@ section {
 @media screen and (min-width: 1280px) {
   section {
     width: 67%;
+  }
+}
+/* PC 1920 사이드바 추가 */
+@media screen and (min-width: 1920px) {
+  .sidebar {
+    display: block;
+    position: fixed;
+    right: 100px;
+    top: 200px;
+    width: 180px;
+    height: 300px;
+    background-color: #888;
   }
 }/*# sourceMappingURL=search_result.css.map */
