--- a/public/styles/search_result.scss
+++ b/public/styles/search_result.scss
@@ -9,6 +9,7 @@ section{
   margin: 0 auto;
 }
 @mixin search-label{
+  width: 80px;
   font-size: 1.6rem;
   font-weight: 700;
   line-height: 32px;
@@ -34,7 +35,6 @@ section{
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
-      justify-content: space-between;
       gap: 15px;
       // @include filter-flex;
       &>div:nth-of-type(1){
@@ -43,28 +43,80 @@ section{
         gap: 10px;
         // @include filter-flex;
         &>div:nth-of-type(1){
+          position: relative;
           display: flex;
           flex-wrap: wrap;
           gap:20px;
-          select{
-            width: 225px;
+          .sido{
+            width: 255px;
             height: 30px;
-            padding: 5px 20px;
             border-radius: 5px;
             border: 1px solid #000;
-            appearance: none;
+            padding: 5px 20px;
             background: url(images/btn_detail.png) no-repeat right 20px center;
-            background-color: #fff;
             background-size: 14px 7px;
+            background-color: #fafafa;
+            color: #000;
+            font-size: 1.2rem;
+            line-height: 20px;
+          }
+          .sido-list{
+            position: absolute;
+            top: 40px;
+            width: 255px;
+            border-radius: 5px;
+            border: 1px solid #000;
+            padding: 20px;
+            background-color: #fafafa;
+            color: #000;
+            ul{
+              display: flex;
+              flex-direction: row;
+              flex-wrap: wrap;
+              align-items: center;
+              gap: 8px;
+              li{
+                label{
+                  font-size: 1.2rem;
+                  font-weight: 400;
+                  line-height: 15px;
+                  span{
+                    vertical-align: top;
+                  }
+                }
+
+              }
+            }
+            &>div{
+              margin-top: 20px;
+              float: right;
+              button{
+                width: 60px;
+                color: #fff;
+                padding: 6px 12px;
+                border-radius: 3px;
+              }
+              .reset-sido{
+                background-color: #888;
+              }
+              .submit-sido{
+                background-color: rgba(0, 13, 255, 0.6);
+              }
+            }
           }
         }
       }
       div:nth-of-type(2){
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
         font-size: 1.2rem;
       }
     }
     .score{
-      @include filter-flex;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 15px;
       div{
         display: flex;
         flex-wrap: wrap;
@@ -73,31 +125,65 @@ section{
       button:nth-of-type(1){
         width: 36px;
         height: 32px;
-        background: url(images/1_point.png) no-repeat center/contain;
+        padding: 6px 8px;
+        background-color: #EDEEF9;
+        border-radius: 5px;
+        img{
+          width: 20px;
+          height: 20px;
+        }
       }
       button:nth-of-type(2){
         width: 55px;
         height: 32px;
-        background: url(images/2_point.png) no-repeat center/contain;
+        padding: 6px 8px;
+        background-color: #EDEEF9;
+        border-radius: 5px;
+        img{
+          width: 39px;
+          height: 20px;
+        }
       }
       button:nth-of-type(3){
         width: 74px;
-        height: 32px;
-        background: url(images/3_point.png) no-repeat center/contain;
+        height: 32px;        padding: 6px 8px;
+        background-color: #EDEEF9;
+        border-radius: 5px;
+        img{
+          width: 58px;
+          height: 20px;
+        }
       }
       button:nth-of-type(4){
         width: 93px;
         height: 32px;
-        background: url(images/4_point.png) no-repeat center/contain;
+        padding: 6px 8px;
+        background-color: #EDEEF9;
+        border-radius: 5px;
+        img{
+          width: 77px;
+          height: 20px;
+        }
       }
       button:nth-of-type(5){
         width: 112px;
         height: 32px;
-        background: url(images/5_point.png) no-repeat center/contain;
+        padding: 6px 8px;
+        background-color: #EDEEF9;
+        border-radius: 5px;
+        img{
+          width: 96px;
+          height: 20px;
+        }
+      }
+      .score-active{
+        background-color: rgba(0, 13, 255, 0.6) !important;
       }
     }
     .hashtag{
-      @include filter-flex;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 15px;
       div{
         display: flex;
         flex-direction: row;
@@ -105,8 +191,14 @@ section{
         gap: 5px;
       }
       button{
-        margin: 8px 10px;
+        padding: 8px 8px;
         font-size: 1.4rem;
+        border-radius: 5px;
+        color: #000;
+      }
+      .hashtag-active{
+        background-color: rgba(0, 13, 255, 0.6) !important;
+        color: #fafafa
       }
     }
   }
@@ -261,6 +353,11 @@ section{
       .city{
         justify-content: flex-start;
         gap: 10px;
+        .sido{
+          height: 35px !important;
+          font-size: 1.6rem !important;
+          line-height: 25px !important;
+        }
       }
       .score{
         flex-direction: row;
@@ -325,22 +422,42 @@ section{
         button:nth-of-type(1){
           width: 40px;
           height: 36px;
+          img{
+            width: 24px;
+            height: 24px;
+          }  
         }
         button:nth-of-type(2){
           width: 63px;
           height: 36px;
+          img{
+            width: 47px;
+            height: 24px;
+          }
         }
         button:nth-of-type(3){
           width: 86px;
           height: 36px;
+          img{
+            width: 70px;
+            height: 24px;
+          }
         }
         button:nth-of-type(4){
           width: 109px;
           height: 36px;
+          img{
+            width: 93px;
+            height: 24px;
+          }
         }
         button:nth-of-type(5){
           width: 132px;
           height: 36px;
+          img{
+            width: 116px;
+            height: 24px;
+          }
         }
       }
     }
@@ -393,5 +510,18 @@ section{
 @media screen and (min-width: 1280px) {
   section{
     width: 67%;
+  }
+}
+
+/* PC 1920 사이드바 추가 */
+@media screen and (min-width: 1920px) {
+  .sidebar{
+    display: block;
+    position: fixed;
+    right: 100px;
+    top: 200px;
+    width: 180px;
+    height: 300px;
+    background-color: #888;
   }
 }
