--- a/public/styles/search_result.css
+++ b/public/styles/search_result.css
@@ -329,21 +329,40 @@ button {
 .list-section .corp-wrap li .corp-score a {
   font-size: 1.6rem;
 }
-.list-section .pages {
+.list-section .page-wrap {
   width: 100%;
   margin: 0 auto;
   margin-top: 100px;
   display: flex;
   justify-content: center;
+  align-items: center;
   gap: 28px;
 }
-.list-section .pages li {
+.list-section .page-wrap .prev {
+  background: url(images/ico_arrow_L.png) no-repeat;
+  background-size: contain;
+  width: 7px;
+  height: 14px;
+}
+.list-section .page-wrap .next {
+  background: url(images/ico_arrow_R.png) no-repeat;
+  background-size: contain;
+  width: 7px;
+  height: 14px;
+}
+.list-section .page-wrap .pages {
+  display: flex;
+  flex-direction: row;
+  gap: 28px;
+  justify-content: center;
+}
+.list-section .page-wrap .pages li {
   font-size: 1.8rem;
   color: #888;
   font-family: NanumSquare;
   cursor: pointer;
 }
-.list-section .pages .page-active {
+.list-section .page-wrap .pages .page-active {
   color: #000;
 }
 
