feat: 시도 정보 정리

--- a/public/styles/search_result.css
+++ b/public/styles/search_result.css
@@ -47,7 +47,7 @@ button {
   flex-wrap: wrap;
   gap: 20px;
 }
-.search-section .filter .city > div:nth-of-type(1) > div:nth-of-type(1) .sido {
+.search-section .filter .city > div:nth-of-type(1) > div:nth-of-type(1) .city-sido {
   width: 255px;
   height: 30px;
   border-radius: 5px;
@@ -386,7 +386,7 @@ button {
     justify-content: flex-start;
     gap: 10px;
   }
-  .search-section .filter .city .sido {
+  .search-section .filter .city .city-sido {
     height: 35px !important;
     font-size: 1.6rem !important;
     line-height: 25px !important;
