--- a/public/styles/signup.css
+++ b/public/styles/signup.css
@@ -59,16 +59,23 @@ form .item label {
   color: #333333;
   margin-bottom: 8px;
 }
-form .item:nth-child(4) div {
+form .item:nth-child(1) div {
   display: flex;
   gap: 20px;
 }
-form .item:nth-child(4) button {
+form .item:nth-child(2) div {
+  display: flex;
+  gap: 20px;
+}
+.req-btn, .confirm-btn {
   width: 40%;
   cursor: pointer;
   background-color: rgba(51, 51, 51, 0.5);
   border: 1px solid rgba(51, 51, 51, 0.5);
   border-radius: 4px;
+}
+.checkEmail{
+  display: none;
 }
 form .checkmsg {
   font-size: 1.4rem;
