--- a/public/styles/mypage.css
+++ b/public/styles/mypage.css
@@ -7,6 +7,18 @@
   display: none;
 }
 
+.content-font {
+  font-size: 1.4rem;
+}
+
+.content-font-small {
+  font-size: 1.3rem;
+}
+
+.bold {
+  font-weight: 700;
+}
+
 main {
   margin-top: 120px;
   width: 100%;
@@ -147,7 +159,7 @@ section {
   flex-direction: column;
 }
 .user-wrap .user-data .update-data fieldset .userdata-nickname input, .user-wrap .user-data .update-data fieldset .userdata-phone input {
-  width: 250px;
+  width: 200px;
   margin-top: 5px;
   margin-left: 12px;
   padding: 10px 20px;
@@ -195,6 +207,199 @@ section {
   border-radius: 5px;
   color: #fff;
   font-size: 1.6rem;
+}
+
+.career-wrap {
+  margin-top: 40px;
+  margin-bottom: 150px;
+  background: #fff;
+  border-radius: 5px;
+  padding: 40px 0 0;
+}
+.career-wrap > h1 {
+  padding: 0 40px;
+  font-size: 1.8rem;
+  color: #444;
+  font-weight: 700;
+}
+.career-wrap .total-career {
+  margin-top: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.8rem;
+  color: #444;
+  gap: 8px;
+}
+.career-wrap .total-career > div {
+  background: linear-gradient(to top, #eeefff 50%, transparent 50%);
+  padding: 0px 5px;
+}
+.career-wrap .total-career > div strong {
+  font-size: 2.8rem;
+  font-weight: 700;
+  color: #000;
+}
+.career-wrap .career-contents {
+  margin-top: 40px;
+}
+.career-wrap .career-contents .career-content {
+  border-bottom: 1px solid #efefef;
+  padding: 40px;
+}
+.career-wrap .career-contents .career-content fieldset {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+.career-wrap .career-contents .career-content fieldset .career-item {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 8px;
+}
+.career-wrap .career-contents .career-content fieldset .career-item input, .career-wrap .career-contents .career-content fieldset .career-item select {
+  padding: 10px 20px;
+  background-color: #efefef;
+  border-radius: 5px;
+  box-shadow: 0px 0px 2px 0px #aaa;
+  color: #444;
+}
+.career-wrap .career-contents .career-content fieldset .career-period .period-wrap {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-top: 5px;
+}
+.career-wrap .career-contents .career-content fieldset .career-period .period-wrap > div {
+  width: 215px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  font-size: 1.3rem;
+  color: #000;
+}
+.career-wrap .career-contents .career-content fieldset .career-period .period-wrap > div .quit {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.career-wrap .career-contents .career-content fieldset .career-period .period-wrap > div .quit > div {
+  display: flex;
+  gap: 4px;
+  vertical-align: top;
+}
+.career-wrap .career-contents .career-content fieldset .career-type select {
+  border: 0px;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  background: url(images/btn_detail.png) no-repeat right 20px center;
+  background-size: 14px 7px;
+  background-color: #efefef;
+}
+.career-wrap .career-contents .career-content .btn-line {
+  margin-top: 40px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.career-wrap .career-contents .career-content .btn-line > a {
+  color: #6269F5;
+  font-weight: 700;
+}
+.career-wrap .career-contents .career-content .btn-line > button {
+  padding: 10px 20px;
+  background: #d9d9d9;
+  border-radius: 5px;
+}
+.career-wrap .career-write {
+  margin-top: 0px;
+  background-color: #efefef;
+}
+.career-wrap .career-write .career-content fieldset .career-item input, .career-wrap .career-write .career-content fieldset .career-item select {
+  background-color: #fff;
+}
+.career-wrap .career-write .career-content .btn-line button {
+  color: #fff;
+  background-color: #6269F5;
+}
+
+.modal-wrap {
+  position: fixed;
+  width: 80%;
+  height: auto;
+  max-width: 1120px;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  padding: 80px 40px;
+  background-color: #fff;
+  border-radius: 5px;
+}
+.modal-wrap > div:nth-child(1) {
+  font-size: 1.6rem;
+  font-weight: 700;
+}
+.modal-wrap > div:nth-child(2) {
+  margin-top: 10px;
+}
+.modal-wrap .change-pw {
+  margin-top: 40px;
+  padding: 40px 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+  background-color: #efefef;
+  border-radius: 5px;
+}
+.modal-wrap .change-pw fieldset {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+}
+.modal-wrap .change-pw fieldset .pw-item {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 15px;
+}
+.modal-wrap .change-pw fieldset .pw-item label {
+  width: 150px;
+  padding-left: 12px;
+}
+.modal-wrap .change-pw fieldset .pw-item input {
+  padding: 10px 20px;
+  border-radius: 5px;
+  background-color: #fff;
+  box-shadow: 0px 0px 2px 0px #6269F5;
+}
+.modal-wrap .change-pw fieldset .pw-item > div > div {
+  padding: 0 12px;
+  font-size: 1.2rem;
+  margin-top: 5px;
+  overflow-wrap: break-word;
+}
+.modal-wrap .change-pw .submit-pw {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 20px;
+}
+.modal-wrap .change-pw .submit-pw button {
+  width: 70px;
+  padding: 10px 20px;
+  border-radius: 5px;
+}
+.modal-wrap .change-pw .submit-pw > button:nth-of-type(1) {
+  background-color: #d9d9d9;
+}
+.modal-wrap .change-pw .submit-pw > button:nth-of-type(2) {
+  background-color: #a0a6ff;
 }
 
 /* 테블릿 768 사이즈 반응형 */
@@ -251,9 +456,63 @@ section {
   .user-wrap .user-data .update-data fieldset .userdata-policy ul {
     align-items: center;
   }
+  .career-wrap {
+    padding: 40px;
+  }
+  .career-wrap > h1 {
+    padding: 0;
+  }
+  .career-wrap .career-contents .career-content fieldset .career-item {
+    flex-direction: row;
+  }
+  .career-wrap .career-contents .career-content fieldset .career-item label {
+    width: 100px;
+  }
+  .career-wrap .career-contents .career-content fieldset .career-item input, .career-wrap .career-contents .career-content fieldset .career-item select {
+    flex-grow: 1;
+  }
+  .career-wrap .career-contents .career-content fieldset .career-period .period-wrap {
+    flex-grow: 1;
+  }
+  .career-wrap .career-contents .career-content fieldset .career-period .period-wrap > div {
+    width: auto;
+    flex-grow: 1;
+  }
+  .career-wrap .career-contents .career-content fieldset .career-period .period-wrap > div label {
+    width: 50px;
+  }
+  .modal-wrap {
+    padding: 80px 60px;
+  }
+  .modal-wrap .change-pw {
+    padding: 40px;
+  }
+  .modal-wrap .change-pw fieldset {
+    gap: 20px;
+  }
+  .modal-wrap .change-pw fieldset .pw-item {
+    width: 100%;
+    justify-content: center;
+  }
+  .modal-wrap .change-pw fieldset .pw-item label {
+    width: 200px;
+  }
+  .modal-wrap .change-pw fieldset .pw-item > div {
+    flex-grow: 1;
+    max-width: 250px;
+  }
+  .modal-wrap .change-pw fieldset .pw-item > div input {
+    width: 100%;
+  }
 }
 /* 테블릿 1024 사이즈 반응형 */
 @media screen and (min-width: 1024px) {
+  .content-font {
+    font-size: 1.6rem;
+  }
+  .content-font-small {
+    font-size: 1.4rem;
+  }
   .main-nav h1 {
     font-size: 2rem;
   }
@@ -262,7 +521,7 @@ section {
     font-size: 1.6rem;
   }
   .user-wrap > h1 {
-    font-size: 1.8rem;
+    font-size: 2rem;
   }
   .user-wrap .user-data .id-card {
     width: 26.5%;
@@ -313,6 +572,19 @@ section {
   .user-wrap .user-data .update-data fieldset .userdata-policy ul li label {
     font-size: 1.6rem;
   }
+  .career-wrap > h1 {
+    font-size: 2rem;
+  }
+  .career-wrap .total-career {
+    font-size: 2rem;
+  }
+  .career-wrap .total-career > div strong {
+    font-size: 3.2rem;
+  }
+  .career-wrap .career-contents .career-content {
+    max-width: 760px;
+    margin: 0 auto;
+  }
 }
 /* PC 1280 사이즈 반응형 */
 @media screen and (min-width: 1280px) {
@@ -322,6 +594,9 @@ section {
   .main-nav {
     width: 67%;
   }
+  .user-wrap {
+    padding: 40px 100px;
+  }
   .user-wrap .user-data .id-card {
     max-width: 210px;
     height: auto;
@@ -329,12 +604,37 @@ section {
   .user-wrap .user-data .update-data {
     width: calc(100% - 270px);
   }
+  .career-wrap {
+    padding: 40px 100px;
+  }
+  .modal-wrap {
+    padding: 80px;
+  }
+  .modal-wrap .change-pw fieldset .pw-item {
+    justify-content: flex-start;
+  }
+  .modal-wrap .change-pw fieldset .pw-item > div {
+    max-width: none;
+    display: flex;
+    flex-direction: row;
+  }
+  .modal-wrap .change-pw fieldset .pw-item > div input {
+    max-width: 320px;
+  }
+  .modal-wrap .change-pw fieldset .pw-item > div > div {
+    flex-grow: 1;
+  }
 }
 /* PC 1400 사이즈 반응형 */
 @media screen and (min-width: 1400px) {
   .userdata-nickname > div, .userdata-phone > div {
+    flex-grow: 1;
     display: flex;
     flex-direction: row;
+  }
+  .userdata-nickname > div input, .userdata-phone > div input {
+    flex-grow: 1;
+    max-width: 300px;
   }
   .userdata-nickname > div .checkmsg, .userdata-phone > div .checkmsg {
     margin-top: 0;
